; ModuleID = '/home/carl/AnghaBench/freebsd/stand/ficl/extr_words.c_twoVariable.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/ficl/extr_words.c_twoVariable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@variableParen = common dso_local global i32 0, align 4
@FW_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @twoVariable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @twoVariable(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @vmGetDict(i32* %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @vmGetWord(i32* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @variableParen, align 4
  %12 = load i32, i32* @FW_DEFAULT, align 4
  %13 = call i32 @dictAppendWord2(i32* %9, i32 %10, i32 %11, i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @dictAllotCells(i32* %14, i32 2)
  ret void
}

declare dso_local i32* @vmGetDict(i32*) #1

declare dso_local i32 @vmGetWord(i32*) #1

declare dso_local i32 @dictAppendWord2(i32*, i32, i32, i32) #1

declare dso_local i32 @dictAllotCells(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
